# home-automation-tapo

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile-ARMv7.dockerfile  README.md  settings.sample.yaml
.cargo/: audit.toml
.claude/skills/commit/: SKILL.md
.claude/skills/pre-commit/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security-audit.yml
kubernetes/: deployment.yaml  kustomization.yaml  vault-secret.yaml
src/: lib.rs  main.rs  settings.rs  telemetry.rs
src/system/: coordinator_actor.rs  device_actor.rs  messages.rs  mod.rs  mqtt_actor.rs
src/system/api/: api_actor.rs  errors.rs  handlers.rs  mod.rs  web_server.rs
tests/api/: health_check.rs  mod.rs  test_app.rs
