[package]
name = "home-automation-tapo"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
actix = "0.13"
actix-rt = "2.11"
actix-web = "4.13"
anyhow = "1.0"
config = { version = "0.15", default-features = false, features = ["yaml"] }
derive_more = { version = "2.1", features = ["display"] }
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31", features = [
    "semconv_experimental",
] }
paho-mqtt = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tapo = "0.8"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros", "signal"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-actix = "0.4"
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
